--- a/js_algo/배열.md
+++ b/js_algo/배열.md
@@ -93,13 +93,13 @@ ex ) 구현했던 node.js 코드 예제)
 var queryString = 'select * from post';
 getConnection().query(queryString, function(err, data){
     console.log(data);
-    // 여기서 data 데이터베이스에 쿼리를 실행하는 결과가 아래의 예시와 같이 2차원 배열의 형태로 반환되게 됩니다.
+    // 여기서 data 데이터베이스에 쿼리를 실행하는 결과가 아래의 예시와 같이 2차원 배열의 비슷한 형태의 객체로 반환됩니다.
 });
 
 ```
 
 ```
-DataBase queryset return
+DataBase queryset return Value
 [
     {
         "id":1,
